[package]
name = "rust_stddep"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.31", optional = true }
nalgebra-glm = { version = "0.17", optional = true }
rand = { version = "0.8", optional = true }
ahash = { version = "0.8", optional = true }
regex = { version = "1", optional = true }
