[package]
name = "rust_stddep"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.31", optional = true }
rand = { version = "0.8", optional = true }
ahash = { version = "0.8", optional = true }
regex = { version = "1", optional = true }

[dependencies.winit]
version = "0.27"
features = ["x11", "wayland", "wayland-dlopen"]
default-features = false
optional = true
